easy section responsive add

--- a/index.html
+++ b/index.html
@@ -160,11 +160,26 @@
       <div class="easy__container container">
         <div class="easy__inner">
           <div class="easy__left">
-            <img class="easy__img" src="./img/easy.png" alt="code script" width="445" height="284">
+            <img class="easy__img" src="./img/easy-img.png" alt="code picture" width="445" height="284">
           </div>
+
           <div class="easy__right">
             <h4 class="easy__title">Easy to implement</h4>
             <p class="easy__text">Our API comes with just a few lines of code. You’ll be up and running in no time. We built our documentation page to integrate payments functionality with ease.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Simple section start -->
+    <section class="simple">
+      <div class="simple__container container">
+        <div class="simple__inner">
+          <div class="simple__left">
+
+          </div>
+
+          <div class="simple__right">
+
           </div>
         </div>
       </div>
