simple section responsive

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
 
           <div class="easy__right">
-            <h4 class="easy__title">Easy to implement</h4>
+            <h3 class="easy__title">Easy to implement</h3>
             <p class="easy__text">Our API comes with just a few lines of code. You’ll be up and running in no time. We built our documentation page to integrate payments functionality with ease.</p>
           </div>
         </div>
@@ -175,13 +175,35 @@
       <div class="simple__container container">
         <div class="simple__inner">
           <div class="simple__left">
-
+            <h3 class="simple__title">Simple UI & UX</h3>
+            <p class="simple__text">Our pre-built form is easy to integrate in your app or website’s checkout flow and designed to optimize conversion. </p>
           </div>
 
           <div class="simple__right">
-
+            <img class="simple__img" src="./img/simple-phone.png" alt="phones picture" width="566" height="500">
           </div>
         </div>
+      </div>
+    </section>
+    <!-- Payinfo section start -->
+    <section class="finance">
+      <div class="finance__container container">
+        <ul class="finance__list">
+          <li class="finance__item">
+            <h4 class="finance__title">Personal Finances</h4>
+            <p class="finance__text">Consolidate financial data from multiple sources and categorize transactions up to 2 years of history. Analyze reports to reconcile activities in your account. </p>
+          </li>
+          
+          <li class="finance__item">
+            <h4 class="finance__title">Banking & Coverage</h4>
+            <p class="finance__text">With our platform, you can speed up account onboarding and support ongoing payments for checking, savings, credit card, and brokerage accounts.</p>
+          </li>
+
+          <li class="finance__item">
+            <h4 class="finance__title">Consumer Payments</h4>
+            <p class="finance__text">It’s easier to set up secure bank payments with us through a flow designed with the user experience in mind. Customers could instantly authenticate their account.</p>
+          </li>
+        </ul>
       </div>
     </section>
    </main> 
