ready section responsive finished

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <h4 class="finance__title">Personal Finances</h4>
             <p class="finance__text">Consolidate financial data from multiple sources and categorize transactions up to 2 years of history. Analyze reports to reconcile activities in your account. </p>
           </li>
-          
+
           <li class="finance__item">
             <h4 class="finance__title">Banking & Coverage</h4>
             <p class="finance__text">With our platform, you can speed up account onboarding and support ongoing payments for checking, savings, credit card, and brokerage accounts.</p>
@@ -203,9 +203,24 @@
             <h4 class="finance__title">Consumer Payments</h4>
             <p class="finance__text">It’s easier to set up secure bank payments with us through a flow designed with the user experience in mind. Customers could instantly authenticate their account.</p>
           </li>
+
         </ul>
       </div>
     </section>
+     <!-- Ready section start -->
+     <section class="ready">
+      <div class="ready__container container">
+        <div class="ready__inner">
+          <h5 class="ready__heading">Ready to start?</h5>
+
+          <form class="form" action="https://echo.htmlacademy.ru/" method="post">
+            <input class="ready__input" type="email" name="user_email" placeholder="Enter email address" required>
+            
+           <button class="ready__button " type="submit">Schedule a Demo</button>
+         </form>
+        </div>
+      </div>
+     </section>
    </main> 
 
    <!-- FOOTER START  -->
