--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a class="header__logo logo" href="./index.html">
               <img class="logo__img" src="./img/logo.svg" alt="Site logo" width="178" height="36">
             </a>
+
             <nav class="header__nav nav">
               <ul class="nav__list">
                 <li class="nav__item">
@@ -83,7 +84,7 @@
     <!-- MAIN start  -->
     <main class="main">
       <section class="main__hero hero">
-        <h1 class="visually-hidden">Payapi</h1>
+        <h1 class="visually-hidden">Payapi site</h1>
         <div class="hero__container container">
           <div class="hero__inner">
             <div class="hero__left">
@@ -111,7 +112,7 @@
         <div class="intro__container container">
           <div class="intro__inner">
             <div class="intro__left">
-            <h3 class="intro__title">Who we work with</h3>
+            <h2 class="intro__title">Who we work with</h2>
 
             <p class="intro__text">Today, millions of people around the world have successfully connected their accounts to apps they love using our API. We provide developers with the tools they need to create easy and accessible experiences for their users.
              </p>
@@ -171,7 +172,7 @@
             </div>
 
             <div class="easy__right">
-              <h3 class="easy__title">Easy to implement</h3>
+              <h2 class="easy__title">Easy to implement</h2>
               <p class="easy__text">Our API comes with just a few lines of code. You’ll be up and running in no time. We built our documentation page to integrate payments functionality with ease.
               </p>
             </div>
@@ -184,7 +185,7 @@
         <div class="simple__container container">
           <div class="simple__inner">
             <div class="simple__left">
-              <h3 class="simple__title">Simple UI & UX</h3>
+              <h2 class="simple__title">Simple UI & UX</h2>
 
               <p class="simple__text">Our pre-built form is easy to integrate in your app or website’s checkout flow and designed to optimize conversion. 
               </p>
@@ -202,17 +203,17 @@
         <div class="finance__container container">
           <ul class="finance__list">
             <li class="finance__item">
-              <h4 class="finance__title">Personal Finances</h4>
+              <h3 class="finance__title">Personal Finances</h3>
               <p class="finance__text">Consolidate financial data from multiple sources and categorize transactions up to 2 years of history. Analyze reports to reconcile activities in your account. </p>
             </li>
 
             <li class="finance__item">
-              <h4 class="finance__title">Banking & Coverage</h4>
+              <h3 class="finance__title">Banking & Coverage</h3>
               <p class="finance__text">With our platform, you can speed up account onboarding and support ongoing payments for checking, savings, credit card, and brokerage accounts.</p>
             </li>
 
             <li class="finance__item">
-              <h4 class="finance__title">Consumer Payments</h4>
+              <h3 class="finance__title">Consumer Payments</h3>
               <p class="finance__text">It’s easier to set up secure bank payments with us through a flow designed with the user experience in mind. Customers could instantly authenticate their account.</p>
             </li>
 
@@ -223,7 +224,7 @@
       <section class="ready">
         <div class="ready__container container">
           <div class="ready__inner">
-            <h5 class="ready__heading">Ready to start?</h5>
+            <h4 class="ready__heading">Ready to start?</h4>
 
             <form class="form" action="https://echo.htmlacademy.ru/" method="post">
               <input class="ready__input" type="email" name="user_email" placeholder="Enter email address" required>
