--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a class="header__inner-link" href="#link">Schedule a Demo</a>
           
         <div class="header__checked">
-          <input class="visually-hidden humburger__check" type="checkbox" name="humurger" id="humurger">
+          <input class="visually-hidden humburger__check" type="checkbox" name="humurger" id="humurger" aria-label="label__input">
             
             <div class="humburger__modal">
               <hr class="humburger__line">
