--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payapi</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <link rel="manifest" href="./favicon/site.webmanifest">
-    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     
@@ -63,7 +63,6 @@
                 <li class="humburger__item">
                   <a class="humburger__link" href="#link">Contact</a>
                 </li>
-                
               </ul>
 
               <a class="header__inner-link humburger-link" href="#link">Schedule a Demo</a>
@@ -91,7 +90,7 @@
               <h2 class="hero__title">Start building with our APIs for absolutely free.</h2>
 
                 <form class="form" action="https://echo.htmlacademy.ru/" method="post">
-                <input class="hero__input" type="email" name="user_email" placeholder="Enter email address" required>
+                <input class="hero__input" type="email" name="user_email" placeholder="Enter email address" required autocomplete="off">
 
                 <button class="hero__button" type="submit">Schedule a Demo</button>
 
