--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <h4 class="ready__heading">Ready to start?</h4>
 
             <form class="form" action="https://echo.htmlacademy.ru/" method="post">
-              <input class="ready__input" type="email" name="user_email" placeholder="Enter email address" required>
+              <input class="ready__input" type="email" name="user_email" placeholder="Enter email address" aria-label="label__input" required autocomplete="off">
 
             <button class="ready__button " type="submit">Schedule a Demo</button>
 
