--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a class="header__inner-link" href="#link">Schedule a Demo</a>
           
         <div class="header__checked">
-          <input class="visually-hidden humburger__check" type="checkbox" name="humurger" id="humurger" aria-label="label__input">
+          <input class="visually-hidden humburger__check" type="checkbox" name="humurger" id="humurger">
             
             <div class="humburger__modal">
               <hr class="humburger__line">
@@ -90,7 +90,7 @@
               <h2 class="hero__title">Start building with our APIs for absolutely free.</h2>
 
                 <form class="form" action="https://echo.htmlacademy.ru/" method="post">
-                <input class="hero__input" type="email" name="user_email" placeholder="Enter email address" required autocomplete="off">
+                <input class="hero__input" type="email" name="user_email" placeholder="Enter email address"  autocomplete="off" aria-label="label__input" required >
 
                 <button class="hero__button" type="submit">Schedule a Demo</button>
 
@@ -226,7 +226,7 @@
             <h4 class="ready__heading">Ready to start?</h4>
 
             <form class="form" action="https://echo.htmlacademy.ru/" method="post">
-              <input class="ready__input" type="email" name="user_email" placeholder="Enter email address" aria-label="label__input" required autocomplete="off">
+              <input class="ready__input" type="email" name="user_email" placeholder="Enter email address" aria-label="label__input" autocomplete="off" required >
 
             <button class="ready__button " type="submit">Schedule a Demo</button>
 
